--- a/priv/for-testing/us.config
+++ b/priv/for-testing/us.config
@@ -54,7 +54,7 @@
 %
 % (a relative path shall be relied here upon only for embedded testing)
 %
-{ log_base_directory, "../../../../priv/for-testing/log" }.
+{ us_log_dir, "../../../../priv/for-testing/log" }.
 
 
 
