Updated and fixed.

--- a/priv/for-testing/us.config
+++ b/priv/for-testing/us.config
@@ -16,6 +16,15 @@
 { epmd_port, 4506 }.
 
 
+% A range of TCP ports that may be used for out-of-band inter-VM communication
+% (not using the Erlang carrier; ex: for send_file):
+%
+% (this range must be typically in-line with any one set at the level of
+% firewalls)
+%
+%{ tcp_port_range, { 50000, 55000 } }.
+
+
 % The execution context (relaxed for development, stricter/safer/adapted for
 % production):
 %
@@ -28,10 +37,13 @@
 % Main section, mostly useful for the US services themselves:
 
 
-% Users, specified mostly for launcher scripts:
+% Users and groups, specified mostly for launcher scripts:
 
 % The user who shall launch the Universal server:
 %{ us_username, "joe" }.
+
+% The group common to all US-related users:
+%{ us_groupname, "some-group" }.
 
 
 % So that multiple instances may co-exist and be reachable:
@@ -39,22 +51,25 @@
 { us_config_server_registration_name, test_universal_config_server }.
 
 
-% Tells where the various US applications involved are located (useful for
-% management start/stop scripts):
+% The base directory of the US application (useful notably for start/stop management
+% scripts in a production context):
 %
 % (if such an entry is not defined here, the US_APP_BASE_DIR environment
-%  variable will be tested as a last resort)
+%  variable will be tested by these scripts, otherwise an attempt to guess it
+%  will be done as a last resort)
 %
-% For example "$HOME/[...]/universal_server":
+% For example "$HOME/[...]/Foobar-Universal-Server":
+%
 %{ us_app_base_dir, "" }.
 
 
-% To override the default log base directory (which is /var/log, not writable
+% To override the default base US log directory (which is /var/log, not writable
 % for normal users):
 %
-% (a relative path shall be relied here upon only for embedded testing)
+% (a relative path shall be relied here upon only for embedded testing; in this
+%  case it shall be relative to the US application base directory; see above)
 %
-{ us_log_dir, "../../../../priv/for-testing/log" }.
+{ us_log_dir, "priv/for-testing/log" }.
 
 
 
