--- a/priv/for-testing/us.config
+++ b/priv/for-testing/us.config
@@ -9,6 +9,11 @@
 
 
 % The Erlang cookie to use, so that VMs can communicate:
+%
+
+% Note that the atom value of that cookie *must* be surrounded by single quotes
+% (i.e. 'mycookie', not mycookie).
+%
 { vm_cookie, 'e08a-4fa2-bcb5-6b44edbd603b-test' }.
 
 
