--- a/priv/for-testing/us.config
+++ b/priv/for-testing/us.config
@@ -8,9 +8,8 @@
 % General section, mostly useful for companion shell scripts:
 
 
-% The Erlang cookie to use, so that VMs can communicate:
+% The Erlang cookie to use, so that VMs can communicate.
 %
-
 % Note that the atom value of that cookie *must* be surrounded by single quotes
 % (i.e. 'mycookie', not mycookie).
 %
