--- a/.github/workflows/erlang-ci.yml
+++ b/.github/workflows/erlang-ci.yml
@@ -20,4 +20,7 @@ jobs:
     - name: Compile
       run: rebar3 compile
     - name: Run tests
-      run: make test NODE_NAMING="--sn"
+      run: |
+	    mkdir -p ${HOME}/.config/universal-server/
+	    cd ${HOME}/.config/universal-server/ && ln -s $(pwd)/priv/for-testing/us.config
+	    make test NODE_NAMING="--sn"
