--- a/conf/GNUmakefile
+++ b/conf/GNUmakefile
@@ -1,7 +1,7 @@
 US_COMMON_TOP = ..
 
 
-.PHONY: clean-local clean-rebar
+.PHONY: info-rebar clean-local clean-rebar
 
 
 
@@ -11,9 +11,14 @@ US_COMMON_TOP = ..
 # (note: not centralised in a GNUmakerules-automatic file for all layers, as
 # substitutions are layer-specific)
 #
-%: %.template$ $(US_COMMON_TOP)/GNUmakevars.inc
+%: %.template $(US_COMMON_TOP)/GNUmakevars.inc
 	@echo "  Generating $@ from $< (VERSION_FOR_REBAR being $(VERSION_FOR_REBAR), TRACES_VERSION_FOR_REBAR being $(TRACES_VERSION), WOOPER_VERSION_FOR_REBAR being $(WOOPER_VERSION), MYRIAD_VERSION_FOR_REBAR being $(MYRIAD_VERSION)); this file should be copied to the root of this layer in order to be taken into account."
 	@cat $< | sed "s|\"MYRIAD_VERSION_FOR_REBAR\"|\"$(MYRIAD_VERSION)\"|g" | sed "s|\"WOOPER_VERSION_FOR_REBAR\"|\"$(WOOPER_VERSION)\"|g" | sed "s|\"TRACES_VERSION_FOR_REBAR\"|\"$(TRACES_VERSION)\"|g" | sed "s|\"VERSION_FOR_REBAR\"|\"$(VERSION_FOR_REBAR)\"|g" | sed "s|FIRST_FILES_FOR_REBAR|$(MYRIAD_REBAR_FIRST_FILES)|g" | sed "s|DEBUG_KEY_FOR_REBAR|$(DEBUG_INFO_KEY)|g"| sed "s|INCS_FOR_REBAR|$(MYRIAD_REBAR_INCS)|g" > $@
+
+
+info-rebar:
+	@echo "MYRIAD_REBAR_FIRST_FILES = $(MYRIAD_REBAR_FIRST_FILES)"
+	@echo "MYRIAD_REBAR_INCS = $(MYRIAD_REBAR_INCS)"
 
 
 clean: clean-local
