Switched to stronger hooks.

--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,20 @@
-% This is a configuration file of rebar3, so that the us_common application can
+% This is a configuration file of rebar3, so that the US-Common application can
 % better integrate in the current OTP ecosystem, despite its (more complex,
 % probably more flexible) native build based on GNU make.
-
+%
 % If the name of this file is 'rebar.config', then it is a generated file,
 % otherwise it is a template (located in conf/rebar.config.template), meant to
 % be filled by information determined at build time or coming from
 % GNUmakevars.inc.
 %
 % See the Myriad counterpart file (same name) for more explanations.
+
+
+% Base layout was obtained thanks to: 'rebar3 new app us_common', as US-Common
+% is an active OTP application (not a mere library).
+
+% To be taken into account, from the library root, through 'make
+%  rebar3-application' or 'make rebar3-release'.
 
 
 % Settings for the 'default' profile follow.
@@ -26,8 +33,16 @@
 
 
 % Include directories found in INC:
-{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../traces/../wooper/include/"}, {i,"../traces/../wooper/../myriad/include/"}, {i,"include"}, {i,"../traces/include"}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."} ]}.
+{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../traces/../wooper/include/"}, {i,"../traces/../wooper/../myriad/include/"}, {i,"include"}, {i,"../traces/include"}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."}, {i,"../traces/../wooper/../myriad/ebin"} ]}.
 
+
+% Otherwise spurious, ill-configured compilations will be wrongly attempted by
+% rebar3:
+%
+% (could not set REBAR_PROFILE=$(REBAR_PROFILE))
+%
+{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
+{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
 
 % For release generation:
@@ -76,7 +91,7 @@
 	% {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode} and
 	% {d,tracing_activated}, and added {d,exec_target_is_production}:
 	%
-	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../traces/../wooper/include/"}, {i,"../traces/../wooper/../myriad/include/"}, {i,"include"}, {i,"../traces/include"}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."} ]},
+	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../traces/../wooper/include/"}, {i,"../traces/../wooper/../myriad/include/"}, {i,"include"}, {i,"../traces/include"}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."}, {i,"../traces/../wooper/../myriad/ebin"} ]},
 
 	% For the build makefiles:
 	{env, [ { 'REBAR_PROFILE', "prod" } ] },
