--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -1,13 +1,20 @@
-% This is a configuration file of rebar3, so that the us_common application can
+% This is a configuration file of rebar3, so that the US-Common application can
 % better integrate in the current OTP ecosystem, despite its (more complex,
 % probably more flexible) native build based on GNU make.
-
+%
 % If the name of this file is 'rebar.config', then it is a generated file,
 % otherwise it is a template (located in conf/rebar.config.template), meant to
 % be filled by information determined at build time or coming from
 % GNUmakevars.inc.
 %
 % See the Myriad counterpart file (same name) for more explanations.
+
+
+% Base layout was obtained thanks to: 'rebar3 new app us_common', as US-Common
+% is an active OTP application (not a mere library).
+
+% To be taken into account, from the library root, through 'make
+%  rebar3-application' or 'make rebar3-release'.
 
 
 % Settings for the 'default' profile follow.
@@ -48,7 +55,7 @@
 {relx, [
 
   % Not 'us_common_release', otherwise plenty of paths will be cluttered:
-  {release, {us_common, "VERSION_FOR_REBAR3"},
+  {release, {us_common, "VERSION_FOR_REBAR"},
 
 	% Listing an application here seems necessary (otherwise its .app file will
 	% not be found), however it will also result in its automatic starting with
