--- a/doc/us-common-technical-manual-english.rst.template
+++ b/doc/us-common-technical-manual-english.rst.template
@@ -32,7 +32,7 @@ Technical Manual of the ``US-Common`` Layer
 :Organisation: Copyright (C) 2019-2021 Olivier Boudeville
 :Contact: about (dash) us-common (at) esperide (dot) com
 :Creation date: Saturday, May 2, 2020
-:Lastly updated: Friday, March 12, 2021
+:Lastly updated: GENERATION_DATE
 :Version: PROJECT_VERSION
 :Status: Stable
 :Dedication: Users and maintainers of the ``US-Common`` layer.
