--- a/.github/workflows/erlang-ci.yml
+++ b/.github/workflows/erlang-ci.yml
@@ -27,4 +27,12 @@ jobs:
         #echo " - content of _build/default/lib directory: $(ls _build/default/lib 2>/dev/null)"
         make info-context
     - name: Run tests
-      run: make test NODE_NAMING="--sn"
+      run: |
+        base_dir="$(pwd)"
+        echo "Base directory is: '${base_dir}'."
+        cfg_dir="${HOME}/.config/universal-server/"
+        echo "Configuration directory is: '${cfg_dir}'."
+        mkdir -p "${cfg_dir}"
+        cd "${cfg_dir}" && ln -s "${base_dir}/priv/for-testing/us.config"
+        cd "${base_dir}"
+        make test NODE_NAMING="--sn"
