Updated for new version.

--- a/rebar.config
+++ b/rebar.config
@@ -33,7 +33,7 @@
 
 
 % Include directories found in INC:
-{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../traces/../wooper/include/"}, {i,"../traces/../wooper/../myriad/include/"}, {i,"include"}, {i,"../traces/include"}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."}, {i,"../traces/../wooper/../myriad/ebin"} ]}.
+{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"include"}, {i,".."}, {i,"../traces/include"}, {i,"../traces/.."}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/.."}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."}, {i,"../traces/../wooper/../myriad/ebin"} ]}.
 
 
 % (hooks needed, for example to create the include symlinks and for the build
@@ -66,7 +66,7 @@
 {relx, [
 
   % Not 'us_common_release', otherwise plenty of paths will be cluttered:
-  {release, {us_common, "0.0.1"},
+  {release, {us_common, "0.0.2"},
 
 	% Listing an application here seems necessary (otherwise its .app file will
 	% not be found), however it will also result in its automatic starting with
@@ -102,7 +102,7 @@
 	% {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode} and
 	% {d,tracing_activated}, and added {d,exec_target_is_production}:
 	%
-	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"../traces/../wooper/include/"}, {i,"../traces/../wooper/../myriad/include/"}, {i,"include"}, {i,"../traces/include"}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."}, {i,"../traces/../wooper/../myriad/ebin"} ]},
+	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"include"}, {i,".."}, {i,"../traces/include"}, {i,"../traces/.."}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/.."}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."}, {i,"../traces/../wooper/../myriad/ebin"} ]},
 
 	% For the build makefiles:
 	{env, [ { 'REBAR_PROFILE', "prod" } ] },
