--- a/doc/us-common-technical-manual-english.rst.template
+++ b/doc/us-common-technical-manual-english.rst.template
@@ -29,11 +29,11 @@ Technical Manual of the ``US-Common`` Layer
 ===========================================
 
 
-:Organisation: Copyright (C) 2019-2021 Olivier Boudeville
+:Organisation: Copyright (C) 2019-GENERATION_YEAR_TAG Olivier Boudeville
 :Contact: about (dash) us-common (at) esperide (dot) com
 :Creation date: Saturday, May 2, 2020
-:Lastly updated: GENERATION_DATE
-:Version: PROJECT_VERSION
+:Lastly updated: GENERATION_DATE_TAG
+:Version: PROJECT_VERSION_TAG
 :Status: Stable
 :Dedication: Users and maintainers of the ``US-Common`` layer.
 :Abstract:
