us_main_config_filename entry added.

--- a/priv/for-testing/us.config
+++ b/priv/for-testing/us.config
@@ -55,8 +55,8 @@
 { us_config_server_registration_name, test_universal_config_server }.
 
 
-% The base directory of the US application (useful notably for start/stop management
-% scripts in a production context):
+% The base directory of the US application (useful notably for start/stop
+% management scripts in a production context):
 %
 % (if such an entry is not defined here, the US_APP_BASE_DIR environment
 %  variable will be tested by these scripts, otherwise an attempt to guess it
@@ -75,6 +75,11 @@
 %
 { us_log_dir, "priv/for-testing/log" }.
 
+
+% Configuration for the US Main server (overriding the default filename, which
+% is "us-main.config"):
+%
+{ us_main_config_filename, "us-main-for-tests.config" }.
 
 
 % Configuration for the US Webserver (overriding the default filename, which is
