Switched to bulletproof rebar3 hooks for homogeneity.

--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -45,14 +45,12 @@
 % Hooks had to be even strengthened, otherwise spurious, ill-configured
 % compilations will be wrongly attempted by rebar3, when used as a dependency:
 %
-{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
-{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
+%{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
+%{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
-% With these hooks, when rebar3 compiles a project depending on US-Common, it
-% tries to recompile it with its own, faulty configuration:
-%
-%{pre_hooks,  [ {compile, "make -s rebar3-bulletproof-compile-pre-hook"} ]}.
-%{post_hooks, [ {compile, "make -s rebar3-bulletproof-compile-post-hook"} ]}.
+% Used now for homogeneity:
+{pre_hooks,  [ {compile, "make -s rebar3-bulletproof-compile-pre-hook"} ]}.
+{post_hooks, [ {compile, "make -s rebar3-bulletproof-compile-post-hook"} ]}.
 
 
 
