--- a/priv/for-testing/us.config
+++ b/priv/for-testing/us.config
@@ -62,8 +62,7 @@
 %  variable will be tested by these scripts, otherwise an attempt to guess it
 %  will be done as a last resort)
 %
-% For example "$HOME/[...]/Foobar-Universal-Server":
-%
+% For example "$HOME/[...]/us_main-x.y.z":
 %{ us_app_base_dir, "" }.
 
 
