us_contact_files added.

--- a/priv/for-testing/us.config
+++ b/priv/for-testing/us.config
@@ -45,9 +45,12 @@
 
 % The user who shall launch the Universal server:
 %{ us_username, "joe" }.
+%{ us_username, "us-srv" }.
 
 % The group common to all US-related users:
 %{ us_groupname, "some-group" }.
+%{ us_groupname, "us-srv" }.
+
 
 
 % So that multiple instances may co-exist and be reachable:
@@ -79,6 +82,16 @@
 % is "us-main.config"):
 %
 { us_main_config_filename, "us-main-for-tests.config" }.
+
+
+% A list of the contact directory ETF files (if any; either as absolute paths,
+% or relative to the US configuration directory - possibly symbolic links
+% pointing to files in VCS) from which contact coordinates shall be referenced
+% by the US contact directory server:
+%
+% (disabled as tested in US-Main, not in US-Common)
+%
+%{ us_contact_files, [ "test-us-contact-directory.etf" ] }.
 
 
 % Configuration for the US Webserver (overriding the default filename, which is
