ETF structure updated.

--- a/priv/for-testing/us.config
+++ b/priv/for-testing/us.config
@@ -1,7 +1,10 @@
 % This is an overall configuration file for the test of the Universal Server.
 %
-% Typically to be symlinked as ~/.config/universal-server/us.config.
-
+% Its format is ETF (see https://myriad.esperide.org/#etf).
+%
+% It is typically to be symlinked as ~/.config/universal-server/us.config.
+%
+% Refer to https://us-common.esperide.org/ for more information.
 
 
 
@@ -54,7 +57,6 @@
 
 
 % So that multiple instances may co-exist and be reachable:
-{ us_server_registration_name, test_universal_server }.
 { us_config_server_registration_name, test_universal_config_server }.
 
 
@@ -78,24 +80,19 @@
 { us_log_dir, "priv/for-testing/log" }.
 
 
-% Configuration for the US Main server (overriding the default filename, which
-% is "us-main.config"):
+
+% Configuration for the US-Main configuration server (overriding the default
+% filename, which is "us-main.config"):
+%
+% (see http://us-main.esperide.org for more details)
 %
 { us_main_config_filename, "us-main-for-tests.config" }.
 
 
-% A list of the contact directory ETF files (if any; either as absolute paths,
-% or relative to the US configuration directory - possibly symbolic links
-% pointing to files in VCS) from which contact coordinates shall be referenced
-% by the US contact directory server:
+% Configuration for the US-Web configuration server (overriding the default
+% filename, which is "us-web.config"):
 %
-% (disabled as tested in US-Main, not in US-Common)
-%
-%{ us_contact_files, [ "test-us-contact-directory.etf" ] }.
-
-
-% Configuration for the US Webserver (overriding the default filename, which is
-% "us-web.config"):
+% (see http://us-web.esperide.org for more details)
 %
 { us_web_config_filename, "us-web-for-tests.config" }.
 
