--- a/rebar.config
+++ b/rebar.config
@@ -22,18 +22,18 @@
 
 % Depends on the following applications (Erlang implied):
 {deps, [
-	{myriad, {git, "git://github.com/Olivier-Boudeville/Ceylan-Myriad",
+	{myriad, {git, "https://github.com/Olivier-Boudeville/Ceylan-Myriad.git",
 			 {branch, "master"}}},
-	{wooper, {git, "git://github.com/Olivier-Boudeville/Ceylan-WOOPER",
+	{wooper, {git, "https://github.com/Olivier-Boudeville/Ceylan-WOOPER.git",
 			 {branch, "master"}}},
-	{traces, {git, "git://github.com/Olivier-Boudeville/Ceylan-Traces",
+	{traces, {git, "https://github.com/Olivier-Boudeville/Ceylan-Traces.git",
 			 {branch, "master"}}}
 ]}.
 
 
 
 % Include directories found in INC:
-{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"include"}, {i,".."}, {i,"../traces/include"}, {i,"../traces/.."}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/.."}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."}, {i,"../traces/../wooper/../myriad/ebin"} ]}.
+{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"include"}, {i,".."}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/include"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/.."}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/include"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/.."}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/apps/generate-password"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/data-management"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/maths"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/meta"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/scripts"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/user-interface/graphical"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/user-interface/textual"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/user-interface/audio"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/user-interface"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/utils"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/.."}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/ebin"} ]}.
 
 
 % (hooks needed, for example to create the include symlinks and for the build
@@ -64,7 +64,7 @@
 {relx, [
 
   % Not 'us_common_release', otherwise plenty of paths will be cluttered:
-  {release, {us_common, "0.0.4"},
+  {release, {us_common, "0.0.7"},
 
 	% Listing an application here seems necessary (otherwise its .app file will
 	% not be found), however it will also result in its automatic starting with
@@ -100,7 +100,7 @@
 	% {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,us_common_debug_mode} and
 	% {d,tracing_activated}, and added {d,exec_target_is_production}:
 	%
-	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"include"}, {i,".."}, {i,"../traces/include"}, {i,"../traces/.."}, {i,"../traces/../wooper/include"}, {i,"../traces/../wooper/.."}, {i,"../traces/../wooper/../myriad/include/apps/generate-password"}, {i,"../traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"../traces/../wooper/../myriad/include/data-management"}, {i,"../traces/../wooper/../myriad/include/maths"}, {i,"../traces/../wooper/../myriad/include/meta"}, {i,"../traces/../wooper/../myriad/include/scripts"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../traces/../wooper/../myriad/include/user-interface/src/textual"}, {i,"../traces/../wooper/../myriad/include/user-interface/src"}, {i,"../traces/../wooper/../myriad/include/utils"}, {i,"../traces/../wooper/../myriad/.."}, {i,"../traces/../wooper/../myriad/ebin"} ]},
+	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"include"}, {i,".."}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/include"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/.."}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/include"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/.."}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/apps/generate-password"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/apps/merge-tool"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/data-management"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/maths"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/meta"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/scripts"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/user-interface/graphical"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/user-interface/textual"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/user-interface/audio"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/user-interface"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/include/utils"}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/.."}, {i,"-I/home/wondersye/Projects/LOANI-latest/LOANI-repository/ceylan/traces/../wooper/../myriad/ebin"} ]},
 
 	% For the build makefiles:
 	{env, [ { 'REBAR_PROFILE', "prod" } ] },
