Minor style update (e.g. fixes).

--- a/doc/us-common-technical-manual-english.rst.template
+++ b/doc/us-common-technical-manual-english.rst.template
@@ -118,13 +118,13 @@ Facilities Provided by this Layer
 
 These are mainly common services centralised here so that the various US applications can make use of them:
 
-- `USServer <https://github.com/Olivier-Boudeville/us-common/blob/master/src/class_USServer.erl>`_: a general **abstraction of a server**, so that all US ones inherit the corresponding base features (ex: name registration, uptime information, applicative ping, state description, etc.)
+- `USServer <https://github.com/Olivier-Boudeville/us-common/blob/master/src/class_USServer.erl>`_: a general **abstraction of a server**, so that all US ones inherit the corresponding base features (e.g. name registration, uptime information, applicative ping, state description, etc.)
 
 - `USConfigServer <https://github.com/Olivier-Boudeville/us-common/blob/master/src/class_USConfigServer.erl>`_: a server (usually a singleton) in charge of **managing all US-level configuration information** on behalf of the other US servers; this comprises the look-up, parsing and checking of the relevant configuration files, the setting of the corresponding information then made available to the rest of the US framework (EPMD port, TCP port range, cookie, execution context, application and log directories, name and scope of registrations, user/group information, etc.)
 
 - `USScheduler <https://github.com/Olivier-Boudeville/us-common/blob/master/src/class_USScheduler.erl>`_: a server whose purpose is to **schedule any kind of asynchronous, independent tasks** (think: "crontab on steroids"); it allows planning task commands to be issued to actuators one time, multiple ones, or indefinitely, based on user-level periods with various policies, on a best-effort basis yet reliably (proper time and timer management), trying to find a balance between the respect of the requested periodicities and the correction of any delay incurred (see also a `corresponding test <https://github.com/Olivier-Boudeville/us-common/blob/master/test/class_USScheduler_test.erl>`_ of it)
 
-- `USTaskRing <https://github.com/Olivier-Boudeville/us-common/blob/master/src/class_USTaskRing.erl>`_: a facility useful to **schedule a set of periodic tasks synchronously** (no overlapping between them) **and uniformly** (as evenly as possible over time); typically useful to pace regularly a set of actions of indefinite number that are ruled by a common periodicity and/or to share a resource unable to cope with concurrent accesses (ex: a non-reentrant third-party log analysis tool that maintains its own opaque state on filesystem, yet have to operate on a set of virtual hosts)
+- `USTaskRing <https://github.com/Olivier-Boudeville/us-common/blob/master/src/class_USTaskRing.erl>`_: a facility useful to **schedule a set of periodic tasks synchronously** (no overlapping between them) **and uniformly** (as evenly as possible over time); typically useful to pace regularly a set of actions of indefinite number that are ruled by a common periodicity and/or to share a resource unable to cope with concurrent accesses (e.g. a non-reentrant third-party log analysis tool that maintains its own opaque state on filesystem, yet have to operate on a set of virtual hosts)
 
 
 -------------
@@ -155,7 +155,7 @@ One may refer to `this example us.config <https://github.com/Olivier-Boudeville/
 Client Configuration
 ====================
 
-Each US service (ex: ``US-Main``, ``US-Web``, etc.) can be monitored (locally or remotely) thanks to a corresponding ``priv/bin/monitor-us-*.sh`` script, which must be given the necessary information (hostname, cookie, TCP port range, etc.) in order to contact the target US instance.
+Each US service (e.g. ``US-Main``, ``US-Web``, etc.) can be monitored (locally or remotely) thanks to a corresponding ``priv/bin/monitor-us-*.sh`` script, which must be given the necessary information (hostname, cookie, TCP port range, etc.) in order to contact the target US instance.
 
 This information is typically stored in a ``us-*-remote-access.config`` ETF file, located as well in the aforementioned `US configuration directory`_.
 
@@ -172,7 +172,7 @@ Licence
 
 This allows the use of the US-Common code in a wide a variety of software projects, while still maintaining copyleft on this code, ensuring improvements are shared.
 
-We hope indeed that enhancements will be back-contributed (ex: thanks to merge requests), so that everyone will be able to benefit from them.
+We hope indeed that enhancements will be back-contributed (e.g. thanks to merge requests), so that everyone will be able to benefit from them.
 
 
 
@@ -187,7 +187,7 @@ As mentioned, the single, direct prerequisite of `US-Common <https://github.com/
 
 Refer to the corresponding `Myriad prerequisite section <http://myriad.esperide.org#prerequisites>`_  for more precise guidelines, knowing that US-Common does not need modules with conditional support such as ``crypto`` or ``wx``.
 
-Most uses of US-Common will require ``authbind`` (ex: on Arch Linux, obtained from the AUR, typically with thanks to the AUR installer that `Ceylan-Hull recommends and installs <https://github.com/Olivier-Boudeville/Ceylan-Hull/blob/master/update-aur-installer.sh>`_ ).
+Most uses of US-Common will require ``authbind`` (e.g. on Arch Linux, obtained from the AUR, typically with thanks to the AUR installer that `Ceylan-Hull recommends and installs <https://github.com/Olivier-Boudeville/Ceylan-Hull/blob/master/update-aur-installer.sh>`_ ).
 
 
 Using Cutting-Edge GIT
