--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -64,7 +64,7 @@
 {relx, [
 
   % Not 'us_common_release', otherwise plenty of paths will be cluttered:
-  {release, {us_common, "VERSION_FOR_REBAR"},
+  {release, {us_common, "VERSION_FOR_OTP"},
 
 	% Listing an application here seems necessary (otherwise its .app file will
 	% not be found), however it will also result in its automatic starting with
