--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@
 declared-types-in-*.txt
 .eunit
 erl_crash.dump
-
+overview.edoc
+doc/index.html
+doc/api-doc/
 doc/us-common-technical-manual-english.html
 doc/us-common-technical-manual-english.rst
 doc/mathjax
