us.config better managed/discussed.

--- a/conf/us-common.config
+++ b/conf/us-common.config
@@ -1,6 +1,7 @@
 % This a test configuration file for the Traces layer, in the context of
 % US-Common.
-
+%
+% Note that it is not our (US-level) us.config one, but an OTP-specific file.
 [
 
   % Settings for the 'traces' application:
