--- a/.github/workflows/erlang-ci.yml
+++ b/.github/workflows/erlang-ci.yml
@@ -48,6 +48,6 @@ jobs:
         cfg_dir="${HOME}/.config/universal-server/"
         echo "Configuration directory is: '${cfg_dir}'."
         mkdir -p "${cfg_dir}"
-        cd "${cfg_dir}" && ln -s "${base_dir}/priv/for-testing/us.config"
+        cd "${cfg_dir}" && ln -s "${base_dir}/priv/conf/us.config"
         cd "${base_dir}"
         make test NODE_NAMING="--sn"
